univention-system-setup (13.0.0-8) unstable; urgency=low

  * Bug #32462: Remove references to dhcp3

 -- Philipp Hahn <hahn@univention.de>  Sun, 05 Jul 2020 07:05:42 +0200

univention-system-setup (13.0.0-7) unstable; urgency=medium

  * try to fix permissions of /var/cache/univention-system-
    setup/packages/Packages

 -- Florian Best <best@univention.de>  Thu, 18 Jun 2020 18:36:17 +0200

univention-system-setup (13.0.0-4) unstable; urgency=medium

  * Bug #33029: remove obsolete USS scripts paths

 -- Florian Best <best@univention.de>  Thu, 18 Jun 2020 15:10:24 +0200

univention-system-setup (13.0.0-3) unstable; urgency=medium

  * Bug #51461: Do not remove the debian CD during the debian installer

 -- Jürn Brodersen <brodersen@univention.de>  Wed, 10 Jun 2020 18:25:02 +0200

univention-system-setup (13.0.0-2) unstable; urgency=medium

  * Bug #51461: Copy packages to the local repository from the dvd

 -- Jürn Brodersen <brodersen@univention.de>  Wed, 10 Jun 2020 01:25:41 +0200

univention-system-setup (13.0.0-1) unstable; urgency=medium

  * Bug #51419: UCS-5.0-0 version bump

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 05 Jun 2020 18:06:16 +0200

univention-system-setup (12.0.2-26) unstable; urgency=medium

  * Bug #50613: Fix repository server check, consider current proxy settings

 -- Erik Damrose <damrose@univention.de>  Mon, 22 Jun 2020 17:29:47 +0200

univention-system-setup (12.0.2-25) unstable; urgency=medium

  * Bug #50613: Configure proxy settings from system setup
    for UCRv proxy/http and proxy/https.

 -- Erik Damrose <damrose@univention.de>  Mon, 22 Jun 2020 13:27:00 +0200

univention-system-setup (12.0.2-24) unstable; urgency=medium

  * Bug #51195: sha-512 password for root

 -- Felix Botner <botner@univention.de>  Thu, 28 May 2020 17:05:50 +0200

univention-system-setup (12.0.2-22) unstable; urgency=medium

  * Bug #51185: correctly remove dead code

 -- Johannes Keiser <keiser@univention.de>  Thu, 30 Apr 2020 14:44:26 +0200
